dropshot/tests/fail/bad_endpoint1.stderr
error: Endpoint handlers must have the following signature:
    async fn(
        rqctx: std::sync::Arc<dropshot::RequestContext<MyContext>>,
        [query_params: Query<Q>,]
        [path_params: Path<P>,]
        [body_param: TypedBody<J>,]
        [body_param: UntypedBody<J>,]
    ) -> Result<HttpResponse*, HttpError>
  --> $DIR/bad_endpoint1.rs:20:1
   |
20 | async fn bad_endpoint() -> Result<HttpResponseOk<()>, HttpError> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Endpoint requires arguments
  --> $DIR/bad_endpoint1.rs:20:22
   |
20 | async fn bad_endpoint() -> Result<HttpResponseOk<()>, HttpError> {
   |                      ^^
